# genvector

./: README.md  buildGenVector.sh
source/genvector/: .clang-format  CMakeLists.txt
source/genvector/inc/Math/: Math.h
source/genvector/inc/Math/GenVector/: 3DConversions.h  3DDistances.h  Allfwd.h  AxisAngle.h  Boost.h  BoostX.h  BoostY.h  BoostZ.h  Cartesian3D.h  DisplacementVector3D.h  EulerAngles.h  LorentzRotation.h  LorentzVector.h  PositionVector3D.h  PxPyPzE4D.h  Quaternion.h  Rotation3D.h  RotationX.h  RotationY.h  RotationZ.h  RotationZYX.h  VectorUtil.h
source/genvector/src/: 3DDistances.cxx  AxisAngle.cxx  AxisAngleXother.cxx  Boost.cxx  BoostX.cxx  BoostY.cxx  BoostZ.cxx  EulerAngles.cxx  LorentzRotation.cxx  Quaternion.cxx  Rotation3D.cxx  RotationZYX.cxx
source/genvector/test/: CMakeLists.txt
source/genvector/test/testConstexpr/: testConstexpr.cpp
