
macro(SUBDIRLIST result curdir)
    file(GLOB children RELATIVE ${curdir} ${curdir}/*)
    set(dirlist "")
    foreach(child ${children})
        if(IS_DIRECTORY ${curdir}/${child})
            list(APPEND dirlist ${child})
        endif()
    endforeach()
    SET(${result} ${dirlist})
endmacro()

SUBDIRLIST(SUBDIRS ${CMAKE_CURRENT_SOURCE_DIR})

foreach(testname ${SUBDIRS})
    file (GLOB sources ${CMAKE_CURRENT_SOURCE_DIR}/${testname}/*.cpp)
    file (GLOB headers ${CMAKE_CURRENT_SOURCE_DIR}/${testname}/*.h)
    add_executable(${testname} ${sources} ${headers})
    set_property(TARGET ${testname}  PROPERTY CXX_STANDARD 17)
    set(CMAKE_INSTALL_RPATH_USE_LINK_PATH true)
    target_link_libraries(${testname} genvector)
    get_target_property(TPROC_INCLUDES genvector INCLUDE_DIRECTORIES)
    target_include_directories(${testname} PUBLIC ${TPROC_INCLUDES})
    add_test(NAME ${testname} COMMAND ${testname})
    set(DOXYGEN_LOCAL_INPUT " ${DOXYGEN_LOCAL_INPUT} ${CMAKE_CURRENT_SOURCE_DIR}/${testname}/")
endforeach()
    set(DOXYGEN_INPUT "${DOXYGEN_INPUT} ${DOXYGEN_LOCAL_INPUT}" PARENT_SCOPE)
